--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -39,7 +39,7 @@ apple.push.certificate=${apple.push.certificate}
 apple.push.password=${apple.push.password}
 
 #Cassandra configuration
-cassandra.host=127.0.0.1:9160
+cassandra.host=${tatami.cassandra.host}:9160
 cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
 
