Upgraded sonar-maven plugin

--- a/pom.xml
+++ b/pom.xml
@@ -1055,6 +1055,11 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>2.5</version>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.4.201502262128</version>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
