--- a/pom.xml
+++ b/pom.xml
@@ -1071,6 +1071,22 @@
                     <version>2.5</version>
                 </plugin>
                 <plugin>
+                    <groupId>com.github.klieber</groupId>
+                    <artifactId>phantomjs-maven-plugin</artifactId>
+                    <version>0.4</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>install</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <version>1.9.8</version>
+                        <skip>${js-tests.skip}</skip>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>com.github.searls</groupId>
                     <artifactId>jasmine-maven-plugin</artifactId>
                     <version>1.3.1.5</version>
@@ -1082,119 +1098,152 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <!-- configuration properties for jasmine goes here -->
-                        <jasmineTargetDir>${project.testresult.directory}/jasmine</jasmineTargetDir> 
+                        <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
+                        <webDriverCapabilities>
+                            <capability>
+                                <name>phantomjs.binary.path</name>
+                                <value>${phantomjs.binary}</value>
+                            </capability>
+                        </webDriverCapabilities>
+                        <preloadSources>
+                            <!-- angular preloading -->
+                            <source>${project.basedir}/src/main/webapp/assets/bower_components/angular/angular.js</source>
+                            <source>${project.basedir}/src/main/webapp/assets/bower_components/angular-resource/angular-resource.js</source>
 
-                        <!--<jsSrcDir>src/main/webapp/js</jsSrcDir>
-                        <jsTestSrcDir>src/main/test/js</jsTestSrcDir>
-                     <sourceExcludes>
-                        <exclude>**/bower_components/**/*.*</exclude>
-                        <exclude>**/js/vendor/**/*.*</exclude>
-                    </sourceExcludes> -->
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.github.timurstrekalov</groupId>
-                <artifactId>saga-maven-plugin</artifactId>
-                <version>1.5.3</version>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>coverage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <baseDir>http://localhost:${jasmine.serverPort}</baseDir>
-                    <outputDir>${project.testresult.directory}/coverage/saga</outputDir>
-                    <skipTests>${skip.unit.tests}</skipTests>
-                    <outputStrategy>BOTH</outputStrategy>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.4.201502262128</version>
-                <executions>
-                    <execution>
-                        <id>pre-unit-tests</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                        <configuration>
-                            <!-- Sets the path to the file which contains the execution data. -->
-                            <destFile>${project.testresult.directory}/coverage/jacoco/jacoco.exec</destFile>
-                            <!-- Sets the name of the property containing the settings for JaCoCo runtime agent. -->
-                            <propertyName>surefireArgLine</propertyName>
-                        </configuration>
-                    </execution>
-                    <!-- Ensures that the code coverage report for unit tests is created after unit tests have been run -->
-                    <execution>
-                        <id>post-unit-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <dataFile>${project.testresult.directory}/coverage/jacoco/jacoco.exec</dataFile>
-                            <outputDirectory>${project.testresult.directory}/coverage/jacoco</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>ro.isdc.wro4j</groupId>
-                                        <artifactId>
-                                            wro4j-maven-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [1.4.7,)
-                                        </versionRange>
-                                        <goals>
-                                            <goal>run</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore></ignore>
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>
-                                            org.codehaus.gmaven
-                                        </groupId>
-                                        <artifactId>
-                                            gmaven-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [1.4,)
-                                        </versionRange>
-                                        <goals>
-                                            <goal>testCompile</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore></ignore>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
+                            <!-- tatami app preloading -->
+                            <source>${project.basedir}/src/main/webapp/app/TatamiApp.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/about/AboutModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/AccountModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/files/FilesModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/groups/GroupsModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/password/PasswordModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/preferences/PreferencesModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/profile/ProfileModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/tags/TagsModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/topPosters/TopPostersModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/account/users/UsersModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/admin/AdminModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/home/HomeModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/components/login/LoginModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/shared/sidebars/home/HomeSidebarModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/shared/sidebars/profile/ProfileSidebarModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/shared/topMenu/post/PostModule.js</source>
+                            <source>${project.basedir}/src/main/webapp/app/shared/topMenu/TopMenuModule.js</source>
+                        </preloadSources>
+                        <jasmineTargetDir>${project.testresult.directory}/jasmine</jasmineTargetDir> 
+                        <jsSrcDir>src/main/webapp</jsSrcDir>
+                        <jsTestSrcDir>src/main/test/javascript</jsTestSrcDir>
+                        <sourceExcludes>
+                            <exclude>**/bower_components/**/*.*</exclude>
+                            <exclude>**/js/vendor/**/*.*</exclude>
+                        </sourceExcludes> 
+                        <specIncludes>
+                            <include>*Spec.js</include>
+                        </specIncludes>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>com.github.timurstrekalov</groupId>
+                    <artifactId>saga-maven-plugin</artifactId>
+                    <version>1.5.3</version>
+                    <executions>
+                        <execution>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>coverage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <baseDir>http://localhost:${jasmine.serverPort}</baseDir>
+                        <outputDir>${project.testresult.directory}/coverage/saga</outputDir>
+                        <skipTests>${skip.unit.tests}</skipTests>
+                        <outputStrategy>BOTH</outputStrategy>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.7.4.201502262128</version>
+                    <executions>
+                        <execution>
+                            <id>pre-unit-tests</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <configuration>
+                                <!-- Sets the path to the file which contains the execution data. -->
+                                <destFile>${project.testresult.directory}/coverage/jacoco/jacoco.exec</destFile>
+                                <!-- Sets the name of the property containing the settings for JaCoCo runtime agent. -->
+                                <propertyName>surefireArgLine</propertyName>
+                            </configuration>
+                        </execution>
+                        <!-- Ensures that the code coverage report for unit tests is created after unit tests have been run -->
+                        <execution>
+                            <id>post-unit-test</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                            <configuration>
+                                <dataFile>${project.testresult.directory}/coverage/jacoco/jacoco.exec</dataFile>
+                                <outputDirectory>${project.testresult.directory}/coverage/jacoco</outputDirectory>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
-        </pluginManagement>
-    </build>
-</project>
+            <pluginManagement>
+                <plugins>
+                    <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                    <plugin>
+                        <groupId>org.eclipse.m2e</groupId>
+                        <artifactId>lifecycle-mapping</artifactId>
+                        <version>1.0.0</version>
+                        <configuration>
+                            <lifecycleMappingMetadata>
+                                <pluginExecutions>
+                                    <pluginExecution>
+                                        <pluginExecutionFilter>
+                                            <groupId>ro.isdc.wro4j</groupId>
+                                            <artifactId>
+                                                wro4j-maven-plugin
+                                            </artifactId>
+                                            <versionRange>
+                                                [1.4.7,)
+                                            </versionRange>
+                                            <goals>
+                                                <goal>run</goal>
+                                            </goals>
+                                        </pluginExecutionFilter>
+                                        <action>
+                                            <ignore></ignore>
+                                        </action>
+                                    </pluginExecution>
+                                    <pluginExecution>
+                                        <pluginExecutionFilter>
+                                            <groupId>
+                                                org.codehaus.gmaven
+                                            </groupId>
+                                            <artifactId>
+                                                gmaven-plugin
+                                            </artifactId>
+                                            <versionRange>
+                                                [1.4,)
+                                            </versionRange>
+                                            <goals>
+                                                <goal>testCompile</goal>
+                                            </goals>
+                                        </pluginExecutionFilter>
+                                        <action>
+                                            <ignore></ignore>
+                                        </action>
+                                    </pluginExecution>
+                                </pluginExecutions>
+                            </lifecycleMappingMetadata>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </pluginManagement>
+        </build>
+    </project>
