--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-stripcomments": "^0.3.1"
+    "grunt-contrib-uglify": "^0.9.1"
   }
 }
