--- a/pom.xml
+++ b/pom.xml
@@ -1124,17 +1124,21 @@
                             </capability>
                         </webDriverCapabilities>
                         <preloadSources>
+                            <!-- angular preloading -->
+                           <!-- tatami app preloading -->
                             <source>${project.basedir}/src/main/webapp/TATAMI.CONCAT.js</source>
-
+                            <source>${project.basedir}/src/main/webapp/assets/bower_components/angular/angular.min.js</source>
+                            <source>${project.basedir}/src/main/webapp/assets/bower_components/angular-mocks/angular-mocks.js</source>
                         </preloadSources>
                         <jasmineTargetDir>${project.testresult.directory}/jasmine</jasmineTargetDir> 
-                        <jsTestSrcDir>src/main/test/javascript</jsTestSrcDir> 
+                        <!-- <jsSrcDir>src/main/webapp</jsSrcDir>
+                        <jsTestSrcDir>src/main/test/javascript</jsTestSrcDir -->>
                         <sourceExcludes>
                             <exclude>**/bower_components/**/*.*</exclude>
                             <exclude>**/js/vendor/**/*.*</exclude>
                         </sourceExcludes> 
                     </configuration>
-                </plugin> 
+                </plugin>
                 <plugin>
                     <groupId>com.github.timurstrekalov</groupId>
                     <artifactId>saga-maven-plugin</artifactId>
