--- a/pom.xml
+++ b/pom.xml
@@ -510,7 +510,7 @@
         <dependency>
             <groupId>com.notnoop.apns</groupId>
             <artifactId>apns</artifactId>
-            <version>1.0.0.Beta6</version>
+            <version>0.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.metrics</groupId>
@@ -545,7 +545,7 @@
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.3.1</version>
+            <version>1.2.2</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -604,7 +604,7 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
-            <version>2.6.11</version>
+            <version>2.6.5</version>
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
@@ -654,12 +654,12 @@
         <dependency>
             <groupId>org.apache.geronimo.javamail</groupId>
             <artifactId>geronimo-javamail_1.4_mail</artifactId>
-            <version>1.9.0-alpha-1</version>
+            <version>1.8.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.openjpa</groupId>
             <artifactId>openjpa</artifactId>
-            <version>2.4.0</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -683,7 +683,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-annotations</artifactId>
-            <version>2.3.0</version>
+            <version>1.1.0.RC3</version>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch</groupId>
