--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,7 @@
 
     <filter-mapping>
         <filter-name>GzipFilter</filter-name>
-        <url-pattern>/tatami/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <error-page>
