Account, Admin Modules HTML-min-ed, tested. min.html files ignored

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ node_modules/karma-phantomjs-launcher
 src/main/webapp/WEB-INF/generated-wro4j
 .merge_file*
 .DS_Store
-
+*.min.html
 phantomjsdriver.log
 
 *.log
