--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
     
     <filter-mapping>
     	<filter-name>CharacterEncodingFilter</filter-name>
-    	<url-pattern>/tatami/*</url-pattern>
+    	<url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <filter-mapping>
